spinner  error is resolved in LoginActivity

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,6 +97,8 @@
         android:id="@+id/spinner"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textColor="#000000"
+        android:padding="8dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toStartOf="@+id/guideline11"
         app:layout_constraintStart_toStartOf="@+id/guideline"
