--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@drawable/background_border"
@@ -9,11 +9,10 @@
         android:id="@+id/titles"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:background="@drawable/rippel_effect"
-        android:elevation="10dp"
+        android:layout_alignParentStart="true"
+        android:background="?attr/selectableItemBackground"
         android:gravity="center"
         android:textSize="25sp"
         android:textStyle="bold"
         tools:text="Products" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
